# Cenomi-RDD-Chatbot

service-request-chatbot/backend/: .env.example  alembic.ini  pyproject.toml
service-request-chatbot/backend/alembic/: env.py  script.py.mako
service-request-chatbot/backend/alembic/versions/: 001_initial_schema.py  002_agent_observability.py
service-request-chatbot/backend/app/: __init__.py  main.py
service-request-chatbot/backend/app/agents/: __init__.py  exceptions.py
service-request-chatbot/backend/app/api/: __init__.py
service-request-chatbot/backend/app/core/: __init__.py  config.py  injection_guard.py  logging.py  permissions.py  redis.py  security.py
service-request-chatbot/backend/app/db/: exceptions.py  models.py  session.py
service-request-chatbot/backend/app/observability/: __init__.py  decorators.py  metrics.py  redaction.py  serializers.py  state_diff.py  trace_manager.py
service-request-chatbot/backend/app/services/: chat_orchestration_service.py
service-request-chatbot/backend/app/types/: __init__.py  chat.py  handover.py  observability.py  service_request.py
service-request-chatbot/backend/tests/e2e/: conftest.py  helpers.py  test_handover_sr_e2e.py
service-request-chatbot/backend/tests/eval/: __init__.py  eval_session.py  run_eval.py  scenarios.py
service-request-chatbot/backend/tests/integration/: conftest.py  test_chat_endpoint.py  test_handover_lifecycle.py  test_observability_endpoints.py  test_service_request_graph.py  test_trace_lifecycle.py
service-request-chatbot/backend/tests/unit/: conftest.py  test_agent_run_repo.py  (+33 more)
(+130 files in other folders)
